# Claude-code-

./: .gitignore  INSTALL.md  LICENSE  MANIFEST.in  PRODUCTIVITY_GUIDE.md  PROJECT_DETAILS.md  PUBLISHING.md  PUBLISH_INSTRUCTIONS.md  PUBLISH_SUMMARY.txt  README.md  RELEASE.md  RELEASE_NOTES.md  RELEASE_v2.0.0.md  RELEASE_v2.5.0.md  SECURITY_AUDIT_REPORT.md  install.py  pyproject.toml  release.py  run.bat  setup.py  test_pet_show.py  使用指南.md  卸载宠物.bat  启动宠物.bat  本地安装指南.md
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  publish.yml  release.yml
claude_pet_companion/: __init__.py  claude_pet_hd.py  cli.py  config.py  config_validator.py  errors.py  themes.py  webview.html
claude_pet_companion/.claude-plugin/: plugin.json
claude_pet_companion/achievements/: __init__.py
claude_pet_companion/agents/: pet-companion.md
claude_pet_companion/ai/: behavior_tree.py  emotion_engine.py  memory_system.py  personality.py
claude_pet_companion/audio/: __init__.py
claude_pet_companion/customization/: __init__.py
claude_pet_companion/daemon/: __init__.py  daemon_manager.py  single_instance.py
claude_pet_companion/errors/: __init__.py  auto_save.py  crash_handler.py
claude_pet_companion/hooks/: hooks.json
claude_pet_companion/ipc/: __init__.py  client.py  protocol.py  server.py
claude_pet_companion/items/: __init__.py  evolution_items.py
claude_pet_companion/memories/: __init__.py  (+4 more)
data/: achievements.json  default_state.json  evolution_paths.json
docs/: PYPI_TRUSTED_PUBLISHING.md
hooks/: hooks.json
scripts/: update_state.py
tests/: __init__.py  test_ai_behavior.py  test_animation_system.py  test_install.py  test_ipc_security.py  test_minigames.py  test_multi_pet.py  test_particle_system.py  test_performance.py  test_pet_state.py  test_safe_eval.py  test_social.py
webview/: index.html
(+73 files in other folders)
